--- a/meson.build
+++ b/meson.build
@@ -1,2 +1,8 @@
-project('wayland-logout', 'c')
+project(
+    'wayland-logout',
+    'c',
+    version: '1.0',
+    license: 'MIT',
+)
+
 executable('wayland-logout', 'wayland-logout.c')
