Default to C implementation
Does not rely on external utilities and now works on Linux and FreeBSD.

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,2 @@
-option('implementation', type : 'combo', choices : ['c', 'python', 'shell'], value : 'shell',
+option('implementation', type : 'combo', choices : ['c', 'python', 'shell'], value : 'c',
     description : 'Implemenation type.')
